# omi-device-builder

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Kconfig  README.md  prj.conf  sysbuild.conf  west.yml
.github/workflows/: release.yml
boards/: template.conf  xiao52.conf  xiao52.overlay  xiao54l.conf  xiao54l.overlay  xiaoesp32s3.conf  xiaoesp32s3.overlay  xiaomg24.conf  xiaomg24.overlay
boards/template/: mcuboot.overlay  ota.overlay  partitions.dtsi  template.overlay
boards/xiao52/: mcuboot.overlay  ota.overlay  partitions.dtsi  xiao52.conf  xiao52.overlay
boards/xiao54l/: xiao54l.overlay
boards/xiaoesp32s3/: xiaoesp32s3.conf  xiaoesp32s3.overlay
boards/xiaomg24/: xiaomg24.overlay
overlays/: README.md  ota.conf  xiao52.overlay  xiao52_ota.overlay  xiao54l.overlay  xiaoesp32s3.overlay  xiaomg24.overlay
scripts/: build_all.ps1  build_all.sh  build_ota.ps1  build_ota.sh
snippets/ota/: ota.conf  snippet.yml
snippets/ota/boards/: xiao_ble.overlay
snippets/usb-console/: snippet.yml  usb-console.conf
src/: battery.h  button.c  codec.c  config.h  led.c  led.h  main.c  mic.c  mic.h  settings.c  settings.h  transport.c  transport.h
src/components/battery/: battery.c
src/components/button/: button.h
src/components/led/: led.c
src/components/mic/: mic_adc.c
src/components/storage/: storage.h  storage_nand.c  storage_sd.c
src/services/: transport.c  transport.h
sysbuild/: mcuboot.conf  mcuboot.overlay
tools/: omi_audio_to_wav.py  requirements.txt
